# PR1y2-IA-2425

./: .buildinfo  .gitignore  CHANGELOG.md  ID-1-mod.out  ID-2-mod.out  README.md  cliff.toml  genindex.html  index.html  input.txt  installation.html  objects.inv  out.txt  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.github/images/: ia.tape
.github/workflows/: cd.yaml  deploy_docs.yaml
_autosummary/: ia.algorithm.AlgorithmHistory.add_step.html  ia.algorithm.AlgorithmHistory.get_history.html  ia.algorithm.AlgorithmHistory.html  ia.algorithm.InformedTraversalAlgorithm.A_STAR.html  ia.algorithm.InformedTraversalAlgorithm.capitalize.html  ia.algorithm.InformedTraversalAlgorithm.casefold.html  ia.algorithm.InformedTraversalAlgorithm.center.html  ia.algorithm.InformedTraversalAlgorithm.count.html  ia.algorithm.InformedTraversalAlgorithm.encode.html  ia.algorithm.InformedTraversalAlgorithm.endswith.html  ia.algorithm.InformedTraversalAlgorithm.expandtabs.html  ia.algorithm.InformedTraversalAlgorithm.find.html  ia.algorithm.InformedTraversalAlgorithm.format.html  ia.algorithm.InformedTraversalAlgorithm.format_map.html  ia.algorithm.InformedTraversalAlgorithm.html  ia.algorithm.InformedTraversalAlgorithm.index.html  ia.algorithm.InformedTraversalAlgorithm.isalnum.html  ia.algorithm.InformedTraversalAlgorithm.isalpha.html  ia.algorithm.InformedTraversalAlgorithm.isascii.html  ia.algorithm.InformedTraversalAlgorithm.isdecimal.html  ia.algorithm.InformedTraversalAlgorithm.isdigit.html  ia.algorithm.InformedTraversalAlgorithm.isidentifier.html  ia.algorithm.InformedTraversalAlgorithm.islower.html  ia.algorithm.InformedTraversalAlgorithm.isnumeric.html  ia.algorithm.InformedTraversalAlgorithm.isprintable.html  ia.algorithm.InformedTraversalAlgorithm.isspace.html  ia.algorithm.InformedTraversalAlgorithm.istitle.html  ia.algorithm.InformedTraversalAlgorithm.isupper.html  ia.algorithm.InformedTraversalAlgorithm.join.html  ia.algorithm.InformedTraversalAlgorithm.ljust.html  ia.algorithm.InformedTraversalAlgorithm.lower.html  ia.algorithm.InformedTraversalAlgorithm.lstrip.html  ia.algorithm.InformedTraversalAlgorithm.maketrans.html  ia.algorithm.InformedTraversalAlgorithm.partition.html  ia.algorithm.InformedTraversalAlgorithm.removeprefix.html  ia.algorithm.InformedTraversalAlgorithm.removesuffix.html  ia.algorithm.InformedTraversalAlgorithm.replace.html  ia.algorithm.InformedTraversalAlgorithm.rfind.html  ia.algorithm.InformedTraversalAlgorithm.rindex.html  ia.algorithm.InformedTraversalAlgorithm.rjust.html  (+340 more)
_modules/: index.html
_sources/: index.rst  installation.rst  usage.rst
_sources/_autosummary/: ia.algorithm.AlgorithmHistory.add_step.rst  ia.algorithm.AlgorithmHistory.get_history.rst  ia.algorithm.AlgorithmHistory.rst  ia.algorithm.InformedTraversalAlgorithm.A_STAR.rst  ia.algorithm.InformedTraversalAlgorithm.capitalize.rst  ia.algorithm.InformedTraversalAlgorithm.casefold.rst  ia.algorithm.InformedTraversalAlgorithm.center.rst  ia.algorithm.InformedTraversalAlgorithm.count.rst  ia.algorithm.InformedTraversalAlgorithm.encode.rst  ia.algorithm.InformedTraversalAlgorithm.endswith.rst  ia.algorithm.InformedTraversalAlgorithm.expandtabs.rst  ia.algorithm.InformedTraversalAlgorithm.find.rst  ia.algorithm.InformedTraversalAlgorithm.format.rst  ia.algorithm.InformedTraversalAlgorithm.format_map.rst  ia.algorithm.InformedTraversalAlgorithm.index.rst  ia.algorithm.InformedTraversalAlgorithm.isalnum.rst  ia.algorithm.InformedTraversalAlgorithm.isalpha.rst  ia.algorithm.InformedTraversalAlgorithm.isascii.rst  ia.algorithm.InformedTraversalAlgorithm.isdecimal.rst  ia.algorithm.InformedTraversalAlgorithm.isdigit.rst  ia.algorithm.InformedTraversalAlgorithm.isidentifier.rst  ia.algorithm.InformedTraversalAlgorithm.islower.rst  ia.algorithm.InformedTraversalAlgorithm.isnumeric.rst  ia.algorithm.InformedTraversalAlgorithm.isprintable.rst  ia.algorithm.InformedTraversalAlgorithm.isspace.rst  ia.algorithm.InformedTraversalAlgorithm.istitle.rst  ia.algorithm.InformedTraversalAlgorithm.isupper.rst  ia.algorithm.InformedTraversalAlgorithm.join.rst  (+352 more)
_static/: documentation_options.js
docs/: README.md
guide/: index.html
ia/: __init__.py  __main__.py  algorithm.py  main.py
reference/: index.html  informed.html  uninformed.html
report/: report.typ  template.typ
(+53 files in other folders)
