[tool.poetry]
name = "ia"
version = "0.1.0"
description = "A simple CLI for tinkering with graph algorithms"
authors = ["Pablo Hernández <17086478+Hadronomy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
twine = "^5.1.1"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ia = "ia.main:main"

[tool.ruff.lint.isort]
known-third-party = ["typer", "click"]

[tool.ruff.lint]
extend-select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
  "D",  # pydocstyle
]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
