[tool.poetry]
name = "ia"
version = "1.2.0"
description = "A simple CLI for tinkering with graph algorithms"
authors = ["Pablo Hernández <17086478+Hadronomy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
lark = "^1.2.2"
tabulate = "^0.9.0"
matplotlib = "^3.9.2"
networkx = { version = "^3.3", optional = true }
pyqt6 = { version = "^6.7.1", optional = true }
scipy = { version = "^1.14.1", optional = true }
pydot = { version = "^3.0.2", optional = true }
pandas = { version = "^2.2.3", optional = true }
pygraphviz = { version = "^1.14", optional = true }

[tool.poetry.extras]
preview = ["networkx", "pyqt6", "scipy", "pydot", "pandas", "pygraphviz"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
twine = "^5.1.1"
ruff = "^0.6.8"
sphinx-book-theme = "^1.1.3"
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ia = "ia.main:main"

[tool.ruff.lint.isort]
known-third-party = ["typer", "click"]

[tool.ruff]
exclude = ["generated_*.py", "docs/"]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
  "D",  # pydocstyle
]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
