[project]
name = "ia"
version = "1.2.2"
description = "A simple CLI for tinkering with graph algorithms"
authors = [{ name = "Pablo Hernández", email = "noreply@hadronomy.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["graph", "algorithms", "cli"]
dependencies = [
  "typer>=0.13.0",
  "lark>=1.2.2",
  "tabulate>=0.9.0",
  "matplotlib>=3.9.2",
]


[project.optional-dependencies]
preview = [
  "networkx>=3.4.2",
  "pyqt6>=6.7.1",
  "scipy>=1.14.1",
  "pydot>=3.0.2",
  "pandas>=2.2.3",
  "pygraphviz>=1.14",
]

[project.urls]
Homepage = "https://github.com/hadronomy/PR1y2-IA-2425"
Repository = "https://github.com/hadronomy/PR1y2-IA-2425"
Issues = "https://github.com/hadronomy/PR1y2-IA-2425/issues"
Documentation = "https://github.com/hadronomy/PR1y2-IA-2425/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ia = "ia.__main__:main"

[tool.uv]
dev-dependencies = [
  "pre-commit>=4.0.1",
  "twine>=5.1.1",
  "ruff>=0.7.3",
  "sphinx>=8.1.3",
  "numpydoc>=1.8.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "ipython>=8.29.0",
  "pydata-sphinx-theme>=0.16.0",
  "hatch>=1.13.0",
]

[tool.hatch.version]
path = "ia/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs", "/report"]

[tool.hatch.build.targets.wheel]
packages = ["ia"]

[tool.ruff.lint.isort]
known-third-party = ["typer", "click"]

[tool.ruff]
exclude = ["generated_*.py"]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
  "D",  # pydocstyle
]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
